force-app/main/default/objects/Dev_DLI_Purchase__c/Dev_DLI_Purchase__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing : DLI Purchases</description>
    <label>Dev DLI Purchase</label>
    <nameField>
        <label>Dev DLI Purchase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dev DLI Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>