force-app/main/default/objects/Dev_DLI_Purchase__c/fields/Dev_DLI_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Dev_DLI_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion ID</label>
    <referenceTo>Dev_DLI_Promotion__c</referenceTo>
    <relationshipLabel>Dev DLI Purchases</relationshipLabel>
    <relationshipName>Dev_DLI_Purchases</relationshipName>
    <type>Lookup</type>
</CustomField>