force-app/main/default/objects/Dev_DLI_Purchase__c/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <label>Net Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>