force-app/main/default/objects/Dev_DLI_Purchase__c/fields/Promotion_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Code__c</fullName>
    <label>Promotion Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>