force-app/main/default/objects/Dev_DLI_Purchase__c/fields/Purchase_ID__c.field-meta.xml
<CustomField>
    <fullName>Purchase_ID__c</fullName>
    <externalId>true</externalId>
    <label>Purchase ID</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>