force-app/main/default/objects/Dev_DLI_Purchase__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <label>Purchase Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>